# uw-claw-code

./: .gitignore  FUTURE.md  PARITY.md  README.md  ROADMAP.md  STATUS.md  USAGE.md
docs/: qwen_capability_matrix_baseline_2026-04-09.md  qwen_capability_matrix_postpatch_2026-04-09.md
docs/superpowers/plans/: 2026-04-09-qwen35-compatibility-hardening.md
runtime_templates/: qwen35_chat_template_cachefix.jinja
rust/crates/api/src/: types.rs
rust/crates/api/src/providers/: mod.rs  openai_compat.rs
rust/crates/commands/src/: lib.rs
rust/crates/runtime/src/: conversation.rs  lsp_client.rs  prompt.rs
rust/crates/rusty-claude-cli/src/: main.rs
rust/crates/semantic_search/: Cargo.toml  README.md  config.toml
rust/crates/semantic_search/src/: assembler.rs  bm25.rs  chunker.rs  config.rs  embedder.rs  error.rs  hyde.rs  index.rs  lib.rs  models.rs  pipeline.rs  reranker.rs  retriever.rs
rust/crates/semantic_search/tests/: test_chunker.rs  test_pipeline.rs  test_retriever.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: lib.rs  semantic_search.rs
