[package]
name = "semantic_search"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
toml = "0.8"
qdrant-client = "1"
tree-sitter = "0.22"
tree-sitter-go = "0.21"
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"
tokenizers = "0.19"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
bincode = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
mockito = "1"

[lints]
workspace = true
